GKE/Storage/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-namespace
  labels:
    name: myapp-namespace
